--- a/Argento Inmobiliaria/index.css
+++ b/Argento Inmobiliaria/index.css
@@ -1,24 +1,20 @@
-/* Cambia el color de fondo de la página a un blanco crema */
 body {
-  background-color: #f0f0eb; /* Color blanco crema */
+  background-color: #f0f0eb; 
 }
 
-/* Estilos para el encabezado */
 header {
   display: flex;
-  justify-content: center; /* Centra horizontalmente */
+  justify-content: center;
   align-items: center;
   background-color: #0c0e83;
   padding: 10px 0;
 }
 
-/* Estilos para el logo */
 .logo img {
-  height: 100px; /* Ajusta la altura del logo según tus necesidades */
+  height: 100px; 
   margin-left: 10px;
 }
 
-/* Estilos para la información de contacto */
 .contacto-info {
   display: flex;
   align-items: center;
@@ -31,7 +27,7 @@ header {
   margin: 0 10px;
 }
 
-/* Estilos para la lista de navegación */
+
 .nav {
   list-style: none;
   display: flex;
@@ -40,16 +36,14 @@ header {
 
 .nav li {
   margin-right: 20px;
-  text-decoration: none; /* Quita el subrayado */
-  position: relative; /* Añade posición relativa */
+  text-decoration: none; 
+  position: relative; 
 }
 
-/* Efecto de sombreado al pasar el cursor */
 .nav li:hover a{
-  color: #bbbbbb; /* Cambia el color de la tipografía al pasar el cursor */
+  color: #bbbbbb; 
 }
 
-/* Agrega el separado "|" entre los elementos de la lista*/
 .nav li:not(:last-child)::after{
   content: "|";
   margin-left: 10px;
@@ -62,7 +56,6 @@ header {
   color: black;
 }
 
-/* Estilos para la línea debajo del encabezado */
 hr {
   border: none;
   border-top: 1px solid #000;
@@ -72,38 +65,32 @@ hr {
 /* Estilos para el footer */
 footer {
   background-color: #464646;
-  padding: 20px 0; /* Espaciado interno */
-  color: white; /* Color del texto */
-  text-align: center; /* Centra el contenido */
+  padding: 20px 0;
+  color: white;
+  position: inherit;
 }
 
 /* Estilos para el logo */
-.logo img {
-  height: 50px; /* Ajusta la altura del logo según tus necesidades */
+.logo-footer img {
+  height: 80px;
   filter: grayscale(100%);
+  margin-left: 10px;
 }
 
-/* Estilos para el texto del footer */
-.footer-text p {
-  margin: 5px 0;
-  font-size: 14px;
+.footer-text{
+  margin-left: 10px;
 }
 
-/* Estilos para los íconos de redes sociales */
-.social-icons-footer a {
-  margin: 0 10px;
-  font-size: 20px;
-  color: black; /* Color de los íconos */
+.social-icons-footer{
+  margin-left: 10px;
 }
 
-/* Estilos para la información de contacto */
-.contact-info-footer p {
-  margin: 5px 0;
-  font-size: 12px;
+.social-icons-footer a{
+  color: black; 
 }
 
-/* Estilos para la información legal */
-.legal-info-footer p {
-  margin: 10px 0;
-  font-size: 10px;
+.legal-info-footer{
+  position: relative;
+  margin-left: 90%;
 }
+
