--- a/Argento Inmobiliaria/index.css
+++ b/Argento Inmobiliaria/index.css
@@ -67,7 +67,6 @@ footer {
   background-color: #464646;
   padding: 20px 0;
   color: white;
-  position: inherit;
 }
 
 /* Estilos para el logo */
@@ -94,3 +93,50 @@ footer {
   margin-left: 90%;
 }
 
+.contact-section {
+  background-color: #f0f0eb;
+  color: black;
+  padding: 20px;
+  text-align: center;
+}
+
+.contact-section h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.contact-section p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.contact-section form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-section label {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.contact-section input,
+.contact-section textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.contact-section button {
+  background-color: orange;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
